--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
@@ -1,5 +1,7 @@
 \chapter*{Introducción. Conexión por arcos}
 
+Antes de comenzar con el contenido propio de la asignatura repasaremos algunos resultados que se estudiaron en Topología I pero que serán necesarios para el desarrollo de Topología II.
+
 \section{Conexión}
 
 \begin{notacion}
@@ -7,7 +9,7 @@
 \end{notacion}
 
 \begin{definicion}
-    Se dice que un e.t $X$ es {no} conexo si existen $U$ y $V$ abiertos disjuntos y no vacíos tales que $X=U\cup V$. 
+    Se dice que un e.t $X$ es \textbf{no conexo} si existen $U$ y $V$ abiertos disjuntos y no vacíos tales que $X=U\cup V$. 
 \end{definicion}
 
 \begin{prop}
@@ -40,7 +42,7 @@
 \end{teo}
 
 \begin{definicion}
-    Dados un e.t. $X$ y un punto $x_0$ se define la componente conexa de $x_0$ es $X$ como el mayor conexo de $X$ que contiene a $x_0$
+    Dados un e.t. $X$ y un punto $x_0$ se define la \textbf{componente conexa} de $x_0$ es $X$ como el mayor conexo de $X$ que contiene a $x_0$
 \end{definicion}
 
 \begin{teo}
@@ -91,7 +93,7 @@
         \begin{gather*}
             \alpha \left(2 \cdot \frac{1}{2}\right) = \alpha(1) = \beta(0) = \beta\left(2\cdot \frac{1}{2} -1\right)
         \end{gather*}
-        con $\left[0, \frac{1}{2}\right]$ y $\left[\frac{1}{2}, 1\right]$ cerrados. Aplicando el lema de pegado\footnote{visto en Topología I} tenemos que $\alpha\ast \beta$ es continua.
+        con $\left[0, \frac{1}{2}\right]$ y $\left[\frac{1}{2}, 1\right]$ cerrados. Aplicando el lema de pegado\footnote{visto en Topología I.} tenemos que $\alpha\ast \beta$ es continua.
 
         \item Si $\alpha:[0,1]\to X$ es un arco uniendo $x$ con $y$, entonces
         \begin{align*}
@@ -113,9 +115,9 @@
     \begin{proof}
         Dado $x_0\in X$ fijo y otro punto $x\in X$ cualquiera, sabemos que existe $\alpha_x:[0,1]\to X$ un arco tal que $\alpha_x(0)=x_0$ y $\alpha_x(1)=x$. En particular, como el intervalo $[0,1]$ es conexo y $\alpha_x$ es continua, entonces se tiene que $\alpha_x([0,1])$ es conexo y podremos escribir 
         \begin{gather*}
-            X=\bigcup\limits_{x\in X}\{x\}\subseteq \bigcup\limits_{x\in X} \alpha_x ([0,1])\subseteq X \Rightarrow X = \bigcup\limits_{x\in X}\alpha_x\{[0,1]\}
+            X=\bigcup\limits_{x\in X}\{x\}\subseteq \bigcup\limits_{x\in X} \alpha_x ([0,1])\subseteq X \Rightarrow X = \bigcup\limits_{x\in X}\alpha_x([0,1])
         \end{gather*}
-        y además $x_0 \in \bigcap\limits_{x\in X}\alpha_x\{[0,1]\}$ por lo que $X$ es conexo (por el lema del peine).
+        y además $x_0 \in \bigcap\limits_{x\in X}\alpha_x([0,1])$ por lo que $X$ es conexo (por el lema del peine).
     \end{proof}
 \end{teo}
 
@@ -181,7 +183,7 @@
 \end{teo}
 
 \begin{coro}
-    Cualquier conjunto $A$ de $\bb{R}^n$ convexo es arcoconexo. Por ejemplo, las bolas abiertas o las bolas cerradas de $\bb{R}^n$.
+    Cualquier conjunto $A$ de $\bb{R}^n$ convexo es arcoconexo. En particular, las bolas abiertas y las bolas cerradas de $\bb{R}^n$ son arcoconexas.
 \end{coro}
 
 \begin{coro}
@@ -191,7 +193,11 @@
 \begin{teo}
     La imagen mediante una aplicación continua de un arcoconexo es un arcoconexo. En particular, ser arcoconexo es una propiedad topológica, es decir, se conserva por homeomorfismos.
     \begin{proof}
-        Sea $f$ la aplicación continua y consideramos $x,y\in f(X)$ cualesquiera. Entonces existen $x_0,y_0\in X$ tal que $f(x_0)=x$ y $f(y_0) = y$. Por ser $X$ arcoconexo, entonces existe un arco $\alpha:[0,1]\to X$ con $\alpha(0)=x_0$ y $\alpha(1)=y_0$. Entonces tenemos que $f\circ \alpha: [0,1]\to f(X)$ es continua y $(f\circ \alpha)(0) = f(x_0) = x$ y $(f\circ\alpha)(1) = f(y_0) = y$ y tenemos por tanto que $(f\circ \alpha)$ es un arco que une $x$ con $y$. Tenemos entonces que para cualesquiera dos puntos $x,y\in f(X)$ existe un arco que los une luego $f(X)$ es arcoconexo.
+        Sea $f$ la aplicación continua y consideramos $x,y\in f(X)$ cualesquiera. Entonces existen $x_0,y_0\in X$ tal que $f(x_0)=x$ y $f(y_0) = y$. Por ser $X$ arcoconexo tenemos que existe un arco $\alpha:[0,1]\to X$ con $\alpha(0)=x_0$ y $\alpha(1)=y_0$. Entonces tenemos que $f\circ \alpha: [0,1]\to f(X)$ es continua y además
+        \begin{gather*}
+            (f\circ \alpha)(0) = f(x_0) = x \ \ \ \text{ y } \ \ \ (f\circ\alpha)(1) = f(y_0) = y
+        \end{gather*}
+        y tenemos por tanto que $(f\circ \alpha)$ es un arco que une $x$ con $y$. Tenemos entonces que para cualesquiera dos puntos $x,y\in f(X)$ existe un arco que los une luego $f(X)$ es arcoconexo.
     \end{proof}
 \end{teo}
 
