--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -2704,7 +2704,7 @@ Parece intuitivo que el grupo fundamental de una esfera es el trivial ya que pod
 \end{observacion}
 
 \begin{teo}[de las tortitas]
-    Sean $A_1$ y $A_2$ dos compactos de $\bb{R}^2$, entonces existe una única que divide a ambos a la vez dejando la mitad del área de cada uno a cada lado de la recta.
+    Sean $A_1$ y $A_2$ dos compactos de $\bb{R}^2$, entonces existe una única recta que divide a ambos a la vez dejando la mitad del área de cada uno a cada lado de la recta.
 
     \begin{figure}[H]
         \centering
